--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: "Resume for Charles M. Bridges, M.S., Ph.D."
+title: "Charles M. Bridges, M.S., Ph.D."
